<resources>
    <string name="app_name" translatable="false">MACS</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>

    <string name="home_item">Início</string>
    <string name="agenda_item">Agenda</string>
    <string name="gallery_item">Galeria</string>
    <string name="location_item">Localização e Contato</string>
    <string name="project_item">Projeto</string>
    <string name="app_item">Aplicativo</string>
    <string name="info_sub_item">Informações</string>
    <string name="check_in_item">Check-in</string>
    <string name="share_title">Recomende!</string>
    <string name="share_title2">Divulgue!</string>
    <string name="commend_text">Espalhe para todos os seus contatos e grupos do WhatsApp que você está utilizando o aplicativo do MACS.
    Assim como você, eles também podem ficar informados sobre todas as atividades do museu, basta clicar no item "Recomende!" do menu e escolher para quem deseja enviar!</string>
    <string name="share_text">Mostre para seus amigos,
        o que está acontecendo no museu.\n
        Poste o sua foto.\nCompartilhe suas experiências.\n
        Comece digitando uma mensagem bem contagiante para
        fazer inveja aos seus amigos:</string>
    <string name="share_footer">Confira o aplicativo do MACS - Museu de Arte Contemporânea de Sorocaba,
        fique por dentro das principais novidades e atividades do museu. Baixe em: https://play.google.com/store/apps/details?id=app.museu.macs
    Se você possui um celular com Android, baixe agora mesmo! Está disponível na Google Play ;)</string>
    <string name="login">Login com Facebook</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="address_line1" translatable="false">Av. Dr. Afonso Vergueiro, 280\n
        CEP 18035-370, Centro - Sorocaba-SP</string>
    <string name="contact_line1" translatable="false">Mais informações em:</string>
    <string name="site" translatable="false">Site: www.macs.org.br</string>
    <string name="facebook">Facebook: www.facebook.com/MACSMuseu</string>
    <string name="phone" translatable="false">Tel.: +55 (15) 3233-1692</string>
    <string name="whatisMACS">O Museu de Arte Contemporânea de Sorocaba,
        é uma instituição cultural eminentemente artística e educativa, espaço dinâmico e plural que prioriza a
        difusão das artes visuais. É uma instituição aberta e acessível a todas as camadas da população e seu
        acervo terá foco na arte contemporânea brasileira.</string>
    <string name="labelTextPicture">Clique na imagem para inserir/remover</string>
    <string name="text_how_to_get">Como chegar</string>
    <string name="info_project_title">Projeto: Desafio Arte + Tecnologia = Inovação</string>
    <string name="info_project_text">Este Desafio é um projeto do MACS realizado em parceria
        com o Hacklab Sorocaba e GDG Sorocaba, que consiste na proposição e execução de ações,
        atividades e projetos que integrem as demandas específicas do museu, com soluções
        tecnológicas inovadoras. A partir das necessidades do museu, a comunidade propõe projetos
        criativos e inovadores que podem agregar em seu conhecimento. Partindo da proposição feita
        o museu seleciona e viabiliza os projetos dispondo os recursos necessários para a sua execução.
        O conhecimento continua dentro da comunidade, que se empenha na solução da demanda e com isso
        agrega valor, tendo o espaço do museu enquanto laboratório criativo.</string>
    <string name="info_project_title2">Quem pode participar dessa iniciativa?</string>
    <string name="info_project_text2">Qualquer pessoa que se interesse pode participar da
        execução do projeto, e durante a execução os participantes contam com todo o
        apoio, infraestrutura e monitoramento do museu.
        Basta vir, conhecer e sentar para participar com a gente.</string>
    <string name="info_dev_title">O Aplicativo</string>
    <string name="info_dev_text">Este aplicativo foi desenvolvido por Jeremias Pereira e
        é fruto do projeto Desafio Arte + Tecnologia = Inovação. Com o objetivo de
        fortalecer e manter a relação e interação do museu com seu público,
        o aplicativo permite que o usurário fique por dentro da agenda mensal
        de atividades do museu, além de acessar a galeria de fotos
        conhecendo as principais atividades e ainda se localizar para
        saber como chegar a unidade.</string>
    <string name="dev_email" translatable="false">jeremias.pereiraa@gmail.com</string>
    <string name="profilePicture">profilePic</string>
    <string name="text_button_chose_picture">Publicar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>s
    <string name="action_settings">Settings</string>
    <string name="action_example">Example</string>
    <string name="app_id" translatable="false">1575018132781478</string>
    <string name="API_key" translatable="false">AIzaSyDlNkof1d48wfW-vpZ08RmuLwgDOqHAyX4</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_agenda_fragment">Hello agenda fragment</string>
    <string name="hello_gallery_fragment">Hello gallery fragment</string>
    <string name="hello_news_fragment">Hello news fragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
