<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="app.museu.macs.fragments.LocationFragment"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:ext="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.bluejamesbond.text.DocumentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleLocation"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            ext:documentView_textColor="@color/black"
            ext:documentView_text="@string/location_item"
            ext:documentView_textAlignment="center"
            ext:documentView_textStyle="bold"
            ext:documentView_textSize="24sp"
            ext:documentView_textFormat="formatted"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:id="@+id/imageLocationMap"
            android:layout_below="@id/titleLocation"
            android:src="@drawable/macs_aerea"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonHowToGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageLocationMap"
            android:text="@string/text_how_to_get"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true" />

        <com.bluejamesbond.text.DocumentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressText1"
            android:layout_below="@id/buttonHowToGet"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            ext:documentView_text="@string/address_line1"
            ext:documentView_textAlignment="center"
            ext:documentView_textFormat="formatted"
            ext:documentView_textColor="@color/black"
            ext:documentView_textSize="18sp"
            android:layout_marginBottom="20dp"/>

        <com.bluejamesbond.text.DocumentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactText1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/addressText1"
            ext:documentView_textColor="@color/black"
            ext:documentView_textStyle="bold"
            ext:documentView_text="@string/contact_line1"
            ext:documentView_textAlignment="center"
            ext:documentView_textFormat="formatted"
            ext:documentView_textSize="18sp"/>

        <com.bluejamesbond.text.DocumentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/site"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/contactText1"
            android:onClick="onClick"
            android:clickable="true"
            ext:documentView_textColor="@color/black"
            ext:documentView_text="@string/site"
            ext:documentView_textAlignment="center"
            ext:documentView_textFormat="formatted"
            ext:documentView_textSize="18sp"/>

        <com.bluejamesbond.text.DocumentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facebook"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/site"
            ext:documentView_textColor="@color/black"
            ext:documentView_text="@string/facebook"
            ext:documentView_textAlignment="center"
            ext:documentView_textFormat="formatted"
            ext:documentView_textSize="18sp"/>

        <com.bluejamesbond.text.DocumentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/facebook"
            ext:documentView_textColor="@color/black"
            ext:documentView_text="@string/phone"
            ext:documentView_textAlignment="center"
            ext:documentView_textFormat="formatted"
            ext:documentView_textSize="18sp"/>

    </RelativeLayout>

</ScrollView>
