<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    tools:context="app.museu.macs.fragments.PostYourPhotoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:text="@string/share_title"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareText"
            android:layout_below="@id/shareTitle"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:text="@string/share_text"
            android:padding="5dp"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/messagePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:hint="rounded"
            android:layout_below="@id/shareText"
            bootstrap:be_roundedCorners="true"
            bootstrap:be_state="success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelTextPicture"
            android:layout_below="@id/messagePicture"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:text="@string/labelTextPicture" />

        <ImageView
            android:id="@+id/selectedPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTextPicture"
            android:layout_centerHorizontal="true"
            android:src="@drawable/imgnotavailable"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/selectedPicture"
            android:text="@string/text_button_chose_picture"
            android:layout_centerHorizontal="true"
            bootstrap:bb_icon_left="fa-facebook-official"
            bootstrap:bb_type="primary" />

    </RelativeLayout>
</ScrollView>